--- a/plugin.xml
+++ b/plugin.xml
@@ -12,6 +12,25 @@
                 <param name="ios-package" value="SquarePointOfSale"/>
             </feature>
         </config-file>
+        <!-- <config-file target="*-Info.plist" parent="CFBundleURLTypes">
+                    <key>LSApplicationQueriesSchemes</key>
+                    <array>
+                        <string>square-commerce-v1</string>
+                    </array>
+                    <key>CFBundleURLTypes</key>
+                    <array>
+                        <dict>
+                            <key>CFBundleTypeRole</key>
+                            <string>Editor</string>
+                            <key>CFBundleURLName</key>
+                            <string>Square</string>
+                            <key>CFBundleURLSchemes</key>
+                            <array>
+                                <string>simproMobileSquare</string>
+                            </array>
+                        </dict>
+                    </array>
+        </config-file> -->
         <header-file src="src/ios/SquarePointOfSale.h" />
         <source-file src="src/ios/SquarePointOfSale.m" />
     </platform>
